@@ -1,4 +1,4 @@
-/* $OpenBSD: session.c,v 1.213 2006/07/26 02:35:17 stevesk Exp $ */
+/* $OpenBSD: session.c,v 1.214 2006/07/26 13:57:17 stevesk Exp $ */
 /*
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
  *                    All rights reserved
@@ -53,6 +53,7 @@
 #endif
 #include <pwd.h>
 #include <signal.h>
+#include <stdlib.h>
 #include <string.h>
 #include <unistd.h>
 
